// User Manual available at https://docs.gradle.org/5.2.1/userguide/tutorial_java_projects.html

plugins {
    id 'java'
    id 'application'
}

repositories {
    jcenter()
    mavenLocal()
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.12'
}

sourceSets {
    main {
        java.srcDirs = ['simulator/src/main/java']
        resources.srcDirs = ['simulator/src/main/java']
    }

    test {
        java {
            srcDirs = ['simulator/src/test/java']
        }
    }
}

compileJava {
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls'
        ]
    }
}

run {
    doFirst {
        jvmArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls'
        ]
    }
}

// Define the main class for the application
mainClassName = 'uniks.vs.ds.Simulator'

// Requires Java Version 11
sourceCompatibility = 11
targetCompatibility = 11